# discord-oscuro

./: .containerignore  .gitignore  CMakeLists.txt  Cargo.toml  Containerfile  LICENSE  README.md  discord_bot  discord_bot.nimble  flake.nix
.cargo/: config.toml
.gitea/workflows/: nix.yml
cmake/: CPM.cmake  macros.cmake
crates/oscuro-core/: Cargo.toml
crates/oscuro-core/src/: commands.rs  config.rs  lib.rs
crates/oscuro-shuttle/: Cargo.toml
crates/oscuro-shuttle/src/: main.rs
crates/oscuro-telegram/: Cargo.toml
crates/oscuro-telegram/src/: main.rs
source/: bot.hpp  commands.hpp  main.cpp  utils.hpp
src/: config.rs  discord_bot.nim  main.rs
src/discord/: commands.rs  mod.rs
src/telegram/: mod.rs
