[package]
name = "oscuro"
version = "0.1.0"
edition = "2021"
description = "Oscuro - a fancy discord bot"
license = "MIT"
repository = "https://vcs.elnafo.ru/L-Nafaryus/oscuro"
publish = ["vcs-elnafo"]

[dependencies]
oscuro-core = { version = "0.1.0", path = "crates/oscuro-core", registry = "vcs-elnafo" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace]
resolver = "2"
members = ["crates/oscuro-core", "crates/oscuro-shuttle"]
