[package]
name = "oscuro-telegram"
version = "0.1.0"
edition = "2021"
publish = ["vcs-elnafo"]

[dependencies]
log = "0.4.22"
pretty_env_logger = "0.5.0"
serenity = "0.12.2"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
